src/test/deca/context/invalid/Super_class_notDeclared.deca
class A {
    float c;
}

class B extends C{
    A a;
}